--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.16.0",
-    "mongoose": "^8.14.0"
+    "mongoose": "^8.14.0",
+    "puppeteer": "^24.20.0",
+    "qrcode-terminal": "^0.12.0",
+    "whatsapp-web.js": "^1.34.1"
   },
   "devDependencies": {
     "dotenv": "^16.5.0",
